# serializer version: 1
# name: test_prolongation_request_created[body]
  '''
  ********************************************************************
  👉 Cette demande est à traiter exclusivement sur votre tableau de bord prescripteur.
  ❌ Merci de ne pas transférer cette demande à notre équipe support.
  *********************************************************************
  
  Bonjour,
  
  John DOE de la structure Acme inc. a besoin de votre accord pour prolonger un PASS IAE.
  
  L'employeur souhaite vous apporter des explications supplémentaires par téléphone. Vous trouverez ci-dessous ses coordonnées pour le contacter :
  
  - Email de l’employeur: email@example.com
  - Numéro de téléphone de l’employeur : +33123456789
  
  - Numéro de PASS : 999999999999
  - Prénom : Jane
  - Nom : DOE
  - Date de naissance : 01/01/1990
  - Début de la prolongation : 01/01/2000
  - Fin de la prolongation : 31/01/2000
  - Motif de prolongation : 50 ans et plus
  - Fiche bilan : http://localhost:8000/approvals/prolongation/request/666/report-file/
  
  Vous pouvez valider ou refuser cette prolongation en vous connectant à votre espace prescripteur Pres. Org. sur les emplois de l'inclusion, à la rubrique "Gérer mes prolongations de PASS IAE".
  
  Précisions en cas de refus :
  
  Conformément à l’article Art. R. 5132-1-8. du Décret n° 2021-1128 du 30 août 2021 relatif à l'insertion par l'activité économique, le refus de prolongation d'un prescripteur est motivé par écrit et notifié, par tout moyen donnant date certaine à la réception de cette notification, à la structure et à l'intéressé.
  
  * Motifs de refus et actions associées :
  
  1/ L’IAE ne correspond plus aux besoins / à la situation de la personne :
  
  Actions possibles :
  - Accompagnement à la recherche d’emploi hors IAE et mobilisation de l’offre de services disponible au sein de votre structure ou celle d’un partenaire
  - Orientation vers un partenaire de l’accompagnement social/professionnel
  
  2/ La typologie de SIAE ne correspond plus aux besoins / à la situation de la personne
  
  Action possible :
  - Orientation vers un autre type de SIAE
  
  ---
  [TEST] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [TEST]
  Les emplois de l'inclusion
  http://localhost:8000/
  '''
# ---
# name: test_prolongation_request_created[subject]
  '[TEST] Demande de prolongation du PASS IAE de Jane DOE'
# ---
# name: test_prolongation_request_created_reminder[body]
  '''
  Bonjour,
  
  Une demande de prolongation du PASS IAE a été transmise à un membre de votre organisation, cette demande est toujours en attente de réponse. Si des démarches sont en cours, veuillez ne pas tenir compte de ce message.
  
  Rappel du message initial :
  
  ********************************************************************
  👉 Cette demande est à traiter exclusivement sur votre tableau de bord prescripteur.
  ❌ Merci de ne pas transférer cette demande à notre équipe support.
  *********************************************************************
  
  Bonjour,
  
  John DOE de la structure Acme inc. a besoin de votre accord pour prolonger un PASS IAE.
  
  L'employeur souhaite vous apporter des explications supplémentaires par téléphone. Vous trouverez ci-dessous ses coordonnées pour le contacter :
  
  - Email de l’employeur: email@example.com
  - Numéro de téléphone de l’employeur : +33123456789
  
  - Numéro de PASS : 999999999999
  - Prénom : Jane
  - Nom : DOE
  - Date de naissance : 01/01/1990
  - Début de la prolongation : 01/01/2000
  - Fin de la prolongation : 31/01/2000
  - Motif de prolongation : 50 ans et plus
  - Fiche bilan : http://localhost:8000/approvals/prolongation/request/666/report-file/
  
  Vous pouvez valider ou refuser cette prolongation en vous connectant à votre espace prescripteur Pres. Org. sur les emplois de l'inclusion, à la rubrique "Gérer mes prolongations de PASS IAE".
  
  Précisions en cas de refus :
  
  Conformément à l’article Art. R. 5132-1-8. du Décret n° 2021-1128 du 30 août 2021 relatif à l'insertion par l'activité économique, le refus de prolongation d'un prescripteur est motivé par écrit et notifié, par tout moyen donnant date certaine à la réception de cette notification, à la structure et à l'intéressé.
  
  * Motifs de refus et actions associées :
  
  1/ L’IAE ne correspond plus aux besoins / à la situation de la personne :
  
  Actions possibles :
  - Accompagnement à la recherche d’emploi hors IAE et mobilisation de l’offre de services disponible au sein de votre structure ou celle d’un partenaire
  - Orientation vers un partenaire de l’accompagnement social/professionnel
  
  2/ La typologie de SIAE ne correspond plus aux besoins / à la situation de la personne
  
  Action possible :
  - Orientation vers un autre type de SIAE
  
  ---
  [TEST] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [TEST]
  Les emplois de l'inclusion
  http://localhost:8000/
  '''
# ---
# name: test_prolongation_request_created_reminder[subject]
  '[TEST] Relance - Demande de prolongation du PASS IAE de Jane DOE'
# ---
# name: test_prolongation_request_denied_employer[body]
  '''
  Bonjour,
  
  L’organisation Pres. Org. a refusé votre demande de prolongation du PASS IAE.
  
  Références :
  Numéro : 99999 99 99999
  Bénéficiaire : Jane DOE
  
  Motif de refus :
  - L’IAE ne correspond plus aux besoins / à la situation de la personne.
  - Explications du prescripteur habilité : [reason_explanation]
  
  Actions envisagées par le prescripteur :
  
  - Accompagnement à la recherche d’emploi hors IAE et mobilisation de l’offre de services disponible au sein de votre structure ou celle d’un partenaire.
  
  - Orientation vers un partenaire de l’accompagnement social/professionnel.
  
  - Autre
  
  - Précisions : [proposed_actions_explanation]
  
  Vous pouvez consulter la date de fin prévisionnelle du PASS IAE dans votre espace employeur sur les emplois de l’inclusion.
  
  ---
  [TEST] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [TEST]
  Les emplois de l'inclusion
  http://localhost:8000/
  '''
# ---
# name: test_prolongation_request_denied_employer[subject]
  '[TEST] Prolongation du PASS IAE de Jane DOE refusée'
# ---
# name: test_prolongation_request_denied_jobseeker[body with Afpa]
  '''
  Bonjour,
  
  L’employeur Acme inc. a sollicité un prescripteur habilité de l’organisation Pres. Org.  pour demander une prolongation de votre PASS IAE.
  
  L’organisation Pres. Org. a refusé la prolongation du PASS IAE.
  
  Motif de refus :
  - L’IAE ne correspond plus aux besoins / à la situation de la personne.
  - Explications du prescripteur habilité : [reason_explanation]
  
  Actions envisagées par le prescripteur :
  
  - Accompagnement à la recherche d’emploi hors IAE et mobilisation de l’offre de services disponible au sein de votre structure ou celle d’un partenaire.
  
  - Orientation vers un partenaire de l’accompagnement social/professionnel.
  
  - Autre
  
  - Précisions : [proposed_actions_explanation]
  
  De votre côté, n’hésitez pas à prendre contact avec notre partenaire, l’Afpa, l’organisme de référence pour la formation en France. Ils pourront vous conseiller et trouver avec vous la formation dont vous avez peut-être besoin pour trouver rapidement un emploi.
  Pour être rappelé par un conseiller : https://cloud.info.afpa.fr/afpa-plateforme-emploi-et-inclusion
  
  Vous pouvez consulter la date de fin prévisionnelle de votre PASS IAE dans votre espace candidat sur les emplois de l’inclusion.
  
  ---
  [TEST] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [TEST]
  Les emplois de l'inclusion
  http://localhost:8000/
  '''
# ---
# name: test_prolongation_request_denied_jobseeker[body]
  '''
  Bonjour,
  
  L’employeur Acme inc. a sollicité un prescripteur habilité de l’organisation Pres. Org.  pour demander une prolongation de votre PASS IAE.
  
  L’organisation Pres. Org. a refusé la prolongation du PASS IAE.
  
  Motif de refus :
  - L’IAE ne correspond plus aux besoins / à la situation de la personne.
  - Explications du prescripteur habilité : [reason_explanation]
  
  Actions envisagées par le prescripteur :
  
  - Accompagnement à la recherche d’emploi hors IAE et mobilisation de l’offre de services disponible au sein de votre structure ou celle d’un partenaire.
  
  - Orientation vers un partenaire de l’accompagnement social/professionnel.
  
  - Autre
  
  - Précisions : [proposed_actions_explanation]
  
  Vous pouvez consulter la date de fin prévisionnelle de votre PASS IAE dans votre espace candidat sur les emplois de l’inclusion.
  
  ---
  [TEST] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [TEST]
  Les emplois de l'inclusion
  http://localhost:8000/
  '''
# ---
# name: test_prolongation_request_denied_jobseeker[subject]
  '[TEST] Prolongation de votre PASS IAE refusée'
# ---
# name: test_prolongation_request_granted_employer[body]
  '''
  Bonjour,
  
  L’organisation Pres. Org. a accepté votre demande de prolongation du PASS IAE.
  
  Références :
  Numéro : 99999 99 99999
  Bénéficiaire : Jane DOE
  
  Vous pouvez consulter la nouvelle date de fin prévisionnelle du PASS IAE dans votre espace employeur sur les emplois de l’inclusion.
  
  ---
  [TEST] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [TEST]
  Les emplois de l'inclusion
  http://localhost:8000/
  '''
# ---
# name: test_prolongation_request_granted_employer[subject]
  '[TEST] Prolongation du PASS IAE de Jane DOE acceptée'
# ---
# name: test_prolongation_request_granted_jobseeker[body]
  '''
  Bonjour,
  
  L’employeur Acme inc. a sollicité un prescripteur habilité de l’organisation Pres. Org.  pour demander une prolongation de votre PASS IAE.
  
  L’organisation Pres. Org. a accepté la prolongation du PASS IAE.
  
  Vous pouvez consulter la nouvelle date de fin prévisionnelle de votre PASS IAE dans votre espace candidat sur les emplois de l’inclusion.
  
  ---
  [TEST] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [TEST]
  Les emplois de l'inclusion
  http://localhost:8000/
  '''
# ---
# name: test_prolongation_request_granted_jobseeker[subject]
  '[TEST] Prolongation de votre PASS IAE acceptée'
# ---
